bk_ida/gccida/c3/print_operand
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/print_operand/src/i386.c:6218:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v11; // esi 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/print_operand/src/i386.c:6233:1: error: must use 'enum' tag to refer to type 'mode_class'
mode_class v26; // ebx 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/print_operand/src/machmode.h:52:30: note: enum 'mode_class' is hidden by a non-type declaration of 'mode_class' here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/print_operand/src/i386.c:6327:17: error: use of undeclared identifier 'off_70CA57'
v15 = ( char *)&off_70CA57; 
                ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/print_operand/src/i386.c:6332:17: error: use of undeclared identifier 'off_70CA51'
v15 = ( char *)&off_70CA51; 
                ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/print_operand/src/i386.c:6397:23: error: use of undeclared identifier 'rtx_code'; did you mean 'rtx_cost'?
put_condition_code( ( rtx_code)v10, v11, v12, v17, v5); 
                      ^~~~~~~~
                      rtx_cost
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/print_operand/src/rtl.h:1787:12: note: 'rtx_cost' declared here
extern int rtx_cost                     PARAMS ((rtx, enum rtx_code));
           ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/print_operand/src/i386.c:6397:32: error: expected ')'
put_condition_code( ( rtx_code)v10, v11, v12, v17, v5); 
                               ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/print_operand/src/i386.c:6397:19: note: to match this '('
put_condition_code( ( rtx_code)v10, v11, v12, v17, v5); 
                  ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/print_operand/src/i386.c:6431:7: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
v26 = mode_class_0[v9]; 
      ^~~~~~~~~~~~
      mode_class
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/print_operand/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/print_operand/src/i386.c:6453:20: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
r.r[2] = ( __int64)x[2]; 
                   ^~~~
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/print_operand/src/i386.c:6478:22: error: use of undeclared identifier 'unk_694DB8'
v7 = ( const char *)&unk_694DB8; 
                     ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/print_operand/src/i386.c:6499:22: error: use of undeclared identifier 'unk_694DB8'
v7 = ( const char *)&unk_694DB8; 
                     ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/print_operand/src/i386.c:6548:21: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
ra.r[2] = ( __int64)x[2]; 
                    ^~~~
11 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/print_operand/src/obj/i386.o] Error 1
